# accb-price-miner

./: .editorconfig  .gitignore  .prettierrc.json  ACCB.spec  README.md  _ACCB_OLD.spec  accb.spec  app.py  app.spec  data_Ilhéus.json  data_Itabuna.json  database.py  hook-flask_material.py  ilheus.json  index.js  itabuna.json  pylintrc  pyproject.toml  requirements.txt  roteiro.md  schema.sql  scrap.py  scraper.py  screen.py  styles.js
_dead_code/: _unused.py
_dead_code/firebase/: search.json
_dead_code/firebase/database/: __init__.py
_dead_code/keyword/: keyword.py
accb/: __main__.py  bi_queue.py  consts.py  database.py  excel.py  locked_var.py  model.py  restartable_timer.py  scraper.py  server.py  state.py  utils.py  web_driver.py
accb/database/: __init__.py  connection.py  upgrader.py
accb/static/js/: home.js  home.mjs  misc.mjs  modal.js  socketio.js
accb/static/styles/: home.css
accb/templates/: base.html  home.html  notallowed.html
accb_rust/: Cargo.toml
accb_rust/src/: gui.rs  main.rs  model.rs  scraper.rs
components/: formik.js  text_input.js
database/: __init__.py
doc/: app.html  database.html  index.html  scrapper.html  search.js
firebase/: __init__.py
hooks/: hook-flask_material.py
schemas/: Schema.js
scraper/: __init__.py
scrapper/: __init__.py
screens/: backup.js  backup_coleta.js  coleta.js  form.js  login.js  realm.js  splash_screen.js
service/: realm.js
static/js/: home.js  misc.mjs
static/styles/: home.css  modal.css
templates/: base.html  home.html  notallowed.html
templates/pages/: home.html
